--- a/data/_posts-en/how-i-made-my-blog.mdx
+++ b/data/_posts-en/how-i-made-my-blog.mdx
@@ -12,8 +12,7 @@ ogImage:
   height: 1200
 ---
 
-import Code from ".Code.jsx";
-import ExampleMDXComponent from ".ExampleMDXComponent.jsx";
+import { Code } from "./Code.tsx";
 
 Coming fresh out of studying a comprehensive React course on Udemy, I finished my first project, [\_Devclock](https://devclock.seanv.dev/), which gave me experience in producing and deploying in vanilla React. Wanting to take my React skills a step further and learn more powerful tools (while also move away from relying on PHP + Wordpress), I set my sights on my next project, a portfolio/blog site made with NextJS!
 
@@ -103,16 +102,6 @@ I do this with my HTML headings, where the default conversion process of my titl
   </a>
 </h3>
 `} />
-
-With the embedding of React components now supported, I can also do cool things like embed animated interactive content like this:
-
-<ExampleMDXComponent />
-
-Which can be done with just the following:
-
-<Code>{`import ExampleComponent from "./ExampleComponent";
-// ... the rest of the article
-<ExampleComponent />`}</Code>
 
 ### Syntax highlighting
 
